--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
         run: |
           npm install
 
-      # - name: Build the App
-      #   run: |
-      #     npm run build
+      - name: Build the App
+        run: |
+          npm run build
           
-      # - name: Restart the pm2
-      #   run: pm2 restart 5
+      - name: Restart the pm2
+        run: pm2 restart 5
